<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.post.PostActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/iv_preview"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_place_holder" />

    <Button
        android:id="@+id/button_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/camera"
        app:layout_constraintEnd_toStartOf="@+id/button_gallery"
        app:layout_constraintStart_toStartOf="@+id/iv_preview"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <Button
        android:id="@+id/button_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/gallery"
        app:layout_constraintEnd_toEndOf="@+id/iv_preview"
        app:layout_constraintStart_toEndOf="@+id/button_camera"
        app:layout_constraintTop_toTopOf="@+id/button_camera" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/button_gallery"
        app:layout_constraintStart_toStartOf="@+id/button_camera"
        app:layout_constraintTop_toBottomOf="@+id/button_gallery">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/write_desc"
            android:inputType="textMultiLine"
            android:lines="6"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cb_share_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/descriptionEditTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditTextLayout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_my_location"
        app:layout_constraintBottom_toBottomOf="@+id/cb_share_location"
        app:layout_constraintStart_toEndOf="@+id/cb_share_location"
        app:layout_constraintTop_toTopOf="@+id/cb_share_location" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/post_story"
        app:layout_constraintEnd_toEndOf="@+id/descriptionEditTextLayout"
        app:layout_constraintStart_toStartOf="@+id/descriptionEditTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/cb_share_location" />

</androidx.constraintlayout.widget.ConstraintLayout>